chore: apply spotless formatting + fix spotbugs HIGH-confidence bugs
Release workflow's spotless and spotbugs gates were failing on main,
blocking v0.5.0 release after the prior :checkAsciiOnly fix.

Spotless: ran ./gradlew spotlessApply across the tree. Mechanical
formatting only -- mostly @Override placement, line splits in long
signatures, and trailing whitespace. No behavior changes. ~80 files.

SpotBugs (2 HIGH-confidence findings):

1. DM_DEFAULT_ENCODING in AutofocusEditorWorkflow.readSamplesCsv: the
   FileReader(File) ctor relies on the platform default charset, which
   varies between Linux/macOS (UTF-8) and Windows (cp1252). Switched to
   Files.newBufferedReader with StandardCharsets.UTF_8 -- the server-
   written samples.csv is ASCII so the practical risk was low, but the
   ASCII-only project policy already calls out cp1252 hazards and
   pinning the charset removes the variance.

2. RCN_REDUNDANT_NULLCHECK_OF_NONNULL_VALUE in
   StageMapCanvas.updateMacroOverlayPosition: the method has an early
   return at the top guarding macroTransform == null, after which the
   field cannot be null inside the same method invocation. Six
   downstream sites still re-checked it, including a primary
   `if (macroTransform != null)` whose `else if (macroPixelSizeUm > 0)`
   and `else` branches were unreachable. Removed the redundant checks
   and the dead branches; documented the invariant where the dead code
   used to sit.